--- a/src/app/components/kitchen/kitchen.component.css
+++ b/src/app/components/kitchen/kitchen.component.css
@@ -1,7 +1,7 @@
 .flex-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items:start;
   justify-content: center;
   height: 100%;
 }
