Aggiunta Bootstrap e implementazione del servizio ordini

--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -1,1 +1,5 @@
-<p>kitchen works!</p>
+<div class="d-flex justify-content-center">
+    @for (order of orders; track order) {
+        <app-order [order]="order"></app-order>
+    }
+</div>
