--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-start flex-wrap">
     @for (order of orders; track order) {
         <app-order [order]="order"></app-order>
     }
