Remove HeaderComponent from app.component and add it to kitchen.component

--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="d-flex justify-content-start flex-wrap">
     @for (order of orders; track order) {
         <app-order [order]="order"></app-order>
