--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -7,9 +7,9 @@
 </div>
 <div class="d-flex">
     <div class="d-flex justify-content-start flex-wrap w-75">
-        @for (order of orders; track order) {
+        <!--@for (order of orders; track order) {
             <app-order [order]="order"></app-order>
-        }
+    }-->
     </div>
     <div class="bg-dark w-25 mx-2">
         <div class="mx-2">
