aggiustamento del login ,modifiche in app (possibile problematica con il logout)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<!--<app-kitchen *ngIf="this.authservice.isLogged()"></app-kitchen>-->
+<app-login *ngIf="!this.authservice.isLogged()"></app-login>
+<router-outlet *ngIf="this.authservice.isLogged()"/>
