--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input
+      type="email"
+      name="email"
+      [(ngModel)]="emailInput"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+    >
+  </div>
+
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input
+      type="password"
+      name="password"
+      [(ngModel)]="passwordInput"
+      class="form-control"
+      id="exampleInputPassword1"
+    >
+    <label >{{errorstring}}</label>
+  </div>
+  <button class="btn btn-primary" (click)="login()">Accedi</button>
+</form>
