Creazione prova stats html

--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,1 +1,66 @@
-<p>statistics works!</p>
+<h1 class="d-flex justify-content-around">Fusion Sushi Restaraunt</h1>
+
+
+<div class="w60">
+    <div class="w50">
+        <div class="box">
+            <div>Tables</div>
+        </div>
+    </div>
+    <div class="w50">
+        <div class="box">
+            <div>Customers</div>
+        </div>
+    </div>
+    <div class="w50">
+        <div class="box">
+            <div>Waiting Orders</div>
+        </div>
+    </div>
+    <div class="w50">
+        <div class="box">
+            <div>Prepared Orders</div>
+        </div>
+    </div>
+</div>
+<div class="w40">
+    <div class="box h200">
+        <div>Dish of the day</div>
+        <img src="" alt="">
+    </div>
+</div>
+
+
+<div class="clear"></div>
+
+
+
+<div class="w100">
+    
+    <h2 >Most Ordered Dishes</h2>
+
+    <!-- da farlo con un ngFor e usare possibilmente le prime cinque pù ordinate-->
+
+    <div class=" d-flex justify-content-around">
+        <div class="immagine">
+            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+            nome
+        </div>
+        <div class="immagine">
+            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+            nome
+        </div>
+        <div class="immagine">
+            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+            nome
+        </div>
+        <div class="immagine">
+            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+            nome
+        </div>
+        <div class="immagine">
+            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+            nome
+        </div>
+    </div>
+</div>
