--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -1,15 +1,14 @@
 <app-header></app-header>
-<div class="d-flex">
-    <select class="form-select mx-3" [(ngModel)]="orderTypeFilter" (change)="applyFilter()">
-        <option value="-">Tutti</option>
-        <option *ngFor="let type of types" value="{{type}}">{{type}}</option>
+<div class="d-flex my-3 mx-2">
+    <select class="form-select" [(ngModel)]="orderTypeFilter" (change)="applyFilter()">
+        <option *ngFor="let type of types" [ngValue]="type">{{type.name}}</option>
     </select> 
 </div>
 <div class="d-flex">
     <div class="d-flex justify-content-start flex-wrap w-75">
-        <!--@for (order of orders; track order) {
+        @for (order of orders; track order) {
             <app-order [order]="order"></app-order>
-    }-->
+        }
     </div>
     <div class="bg-dark w-25 mx-2">
         <div class="mx-2">
