Update kitchen component layout and initialize order type filter on data load

--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,4 +1,4 @@
-<div class="card mx-2" style="width: 18rem;">
+<div class="card mx-2 my-2" style="width: 18rem;">
     <div class="d-flex justify-content-evenly py-2">
         <p>Order ID: {{order.id}} </p>
         <p>Order Time: {{order.orderDate | date:'HH:mm'}}</p>
