--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -4,15 +4,17 @@
         <option *ngFor="let type of types" [ngValue]="type">{{type.name}}</option>
     </select> 
 </div>
-<div class="d-flex">
-    <div class="d-flex justify-content-start flex-wrap w-75">
+<div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-start flex-wrap w-80">
         @for (order of orders; track order) {
             <app-order [order]="order"></app-order>
         }
     </div>
-    <div class="bg-dark w-25 mx-2">
-        <div class="mx-2">
-            <p class="text-light">sdhsdjh</p>
+    <div class="d-flex justify-content-end">
+        <div class="bg-dark w-20 mx-2" style="min-width: 18em; min-height: 35em;">
+            <div class="mx-2">
+                <p class="text-light"></p>
+            </div>
         </div>
     </div>
 </div>
