--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -12,8 +12,12 @@
     </div>
     <div class="d-flex justify-content-end">
         <div class="bg-dark w-20 mx-2" style="min-width: 18em; min-height: 35em;">
-            <div class="mx-2">
-                <p class="text-light"></p>
+            <div class="mx-2 text-light">
+                <ul>
+                  <li *ngFor="let entry of summary | keyvalue">
+                    {{ entry.key }}: {{ entry.value }}
+                  </li>
+                </ul>
             </div>
         </div>
     </div>
