--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,13 +1,15 @@
-<div class="card mx-2 my-2" style="width: 18rem;">
+<div class="card mx-2 my-2" style="width: 18rem; min-height: 18em;">
     <div class="d-flex justify-content-evenly py-2">
         <p>Order ID: {{order.id}} </p>
         <p>Order Time: {{order.orderDate | date:'HH:mm'}}</p>
     </div>
     <hr class="my-2 border-primary">
-    <div class="card-body">
+    <div class="card-body d-flex flex-column">
         <h4>Table: {{order.tableId}}</h4> 
         <h5 class="card-title">Product name: {{order.name}}</h5>
         <h5 class="card-title">Quantity: {{order.qty}}</h5>
-        <a class="btn btn-primary">Sign as completed</a>
+        <div class="mt-auto d-flex">
+            <a class="btn btn-primary">Sign as completed</a>
+        </div>
     </div>
 </div>
