Update of stats html using bootstrap

--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,41 +1,54 @@
+
 <h1 class="d-flex justify-content-around">Fusion Sushi Restaraunt</h1>
 
 
-<div class="w60">
-    <div class="w50">
-        <div class="box">
-            <div>Tables</div>
-        </div>
-    </div>
-    <div class="w50">
-        <div class="box">
-            <div>Customers</div>
-        </div>
-    </div>
-    <div class="w50">
-        <div class="box">
-            <div>Waiting Orders</div>
-        </div>
-    </div>
-    <div class="w50">
-        <div class="box">
-            <div>Prepared Orders</div>
-        </div>
-    </div>
-</div>
-<div class="w40">
-    <div class="box h200">
-        <div>Dish of the day</div>
-        <img src="" alt="">
-    </div>
-</div>
+<div class="d-flex">
 
+    <div class="w-75 container d-flex justify-content-around flex-wrap">
+        <div class="w-50 ">
+            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+                <h3>Tables</h3>
+                0
+            </div>
+        </div>
+        <div class="w-50 ">
+            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+                <h3>Customers</h3>
+                0
+            </div>
+        </div>
+        <div class="w-50 ">
+            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+                <h3>Waiting Orders</h3>
+                0
+            </div>
+        </div>
+        <div class="w-50 ">
+            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+                <h3>Prepared Orders</h3>
+                0
+            </div>
+        </div>
+        
+    </div>
+    <div class="w-50 position-relative">
+        <div class="box h200 border border-4 rounded-4 border-black my-2 mx-2">
+            <h3>Dish of the day</h3>
+            <div class="immagine position-absolute top-50 start-50 translate-middle">
+                <img class="w-100" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+
+            </div>
+        </div>
+        
+    </div>
+
+</div>
 
 <div class="clear"></div>
 
 
 
-<div class="w100">
+<div class="border border-4 rounded-4 border-black my-2 mx-2">
     
     <h2 >Most Ordered Dishes</h2>
 
