--- a/src/app/components/statistics/statistics.component.css
+++ b/src/app/components/statistics/statistics.component.css
@@ -1,46 +1,22 @@
 html{
     font-size: 20px;
+    background-color: blue;
 }
 
 h2{
     margin: 1rem 2.2rem;
 }
 
-.clear{
-    clear: both;
-}
-
-.w100{
-    /* border: 1px solid black; */
-    border: 0.1rem solid black;
-    width: 100%;
-    height: auto;
-    float: left;
-    margin: 0.2rem;
-}
-
-.w60{
-    width: 60%;
-    float: left;
-}
-
-.w50{
-    width: 50%;
-    float: left;
-}
-
-.w40{
-    width: 40%;
-    float: left;
-}
-
-
-
 .box{
-    height: 10rem;
-    border: 0.1rem solid black;
-    margin: 0.1rem 0.5rem;
+    /* height: 10rem; */
+    /* border: 0.1rem solid black; */
+    width: 97%;
+    height: 90%;
+    /* margin: 0.5rem 0.5rem; */
+    margin: 5% 5%;
     text-align: center;
+    font-size: 3rem;
+    align-items: center;
 }
 
 
@@ -50,10 +26,13 @@ h2{
 
 .immagine{
     width: 14rem;
-    text-align: center;
+    align-items: center;
+    align-content: center;
 }
 
 .immagine img{
+    /* align-items: center;
+    align-content: center; */
     width: 100%;
-    /* border: 1px solid black; */
 }
+
