--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,26 +1,33 @@
-<form>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input
-      type="email"
-      name="email"
-      [(ngModel)]="emailInput"
-      class="form-control"
-      id="exampleInputEmail1"
-      aria-describedby="emailHelp"
-    >
-  </div>
+<div class="d-flex justify-content-center align-items-center vh-100 bg-light">
+  <div class="card p-4 shadow-sm rounded" style="min-width: 350px;">
+    <h4 class="mb-4 text-center">Login</h4>
+    <form (ngSubmit)="login()">
+      <div class="mb-3">
+        <input
+          type="text"
+          name="usuername"
+          [(ngModel)]="emailInput"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          placeholder="Username"
+        >
+      </div>
+      <div class="mb-3 position-relative">
+        <span>
+          <input
+          [type]="passwordVisible ? 'text' : 'password'"
+          name="password"
+          [(ngModel)]="passwordInput"
+          class="form-control"
+          placeholder="Password">
+          <i class="position-absolute p-0 IconVisibility" [ngClass]="passwordVisible ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill'" (click)="togglePasswordVisibility()"></i>
+        </span>
+        
+        <small class="text-danger d-block mt-1">{{ errorstring }}</small>
+      </div>
 
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input
-      type="password"
-      name="password"
-      [(ngModel)]="passwordInput"
-      class="form-control"
-      id="exampleInputPassword1"
-    >
-    <label >{{errorstring}}</label>
+      <input type="submit" class="btn btn-primary w-100" (click)="login()" value="accedi">
+    </form>
   </div>
-  <button class="btn btn-primary" (click)="login()">Accedi</button>
-</form>
+</div>
