Update summary display format and ensure summary is updated after order retrieval

--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -17,7 +17,7 @@
             <div class="mx-2 text-light">
                 <ul>
                   <li *ngFor="let entry of summary | keyvalue">
-                    {{ entry.key }}: {{ entry.value }}
+                    {{ entry.key }} x{{ entry.value }}
                   </li>
                 </ul>
             </div>
