add background color on login css

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -5,3 +5,7 @@
      background: none;
       border: none;
 }
+.fullscreen-bg {
+  background-color: #0d6efd; /* blu Bootstrap, oppure usa #007bff o quello che preferisci */
+  min-height: 100vh;
+}
