--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center align-items-center vh-100 bg-light">
+<div class="fullscreen-bg d-flex justify-content-center align-items-center">
   <div class="card p-4 shadow-sm rounded" style="min-width: 350px;">
     <h4 class="mb-4 text-center">Login</h4>
     <form (ngSubmit)="login()">
