--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,4 +1,3 @@
-
 <h1 class="d-flex justify-content-around">Fusion Sushi Restaraunt</h1>
 
 
@@ -7,35 +6,35 @@
     <div class="w-75 container d-flex justify-content-around flex-wrap">
         <div class="w-50 ">
             <div class="box border border-4 rounded-4 border-black my-2 mx-2">
-                <h3>Tables</h3>
+                <div class="h3">Tables</div>
                 0
             </div>
         </div>
         <div class="w-50 ">
             <div class="box border border-4 rounded-4 border-black my-2 mx-2">
-                <h3>Customers</h3>
+                <div class="h3">Customers</div>
                 0
             </div>
         </div>
         <div class="w-50 ">
             <div class="box border border-4 rounded-4 border-black my-2 mx-2">
-                <h3>Waiting Orders</h3>
+                <div class="h3">Waiting Orders</div>
                 0
             </div>
         </div>
         <div class="w-50 ">
             <div class="box border border-4 rounded-4 border-black my-2 mx-2">
-                <h3>Prepared Orders</h3>
+                <div class="h3">Prepared Orders</div>
                 0
             </div>
         </div>
         
     </div>
     <div class="w-50 position-relative">
-        <div class="box h200 border border-4 rounded-4 border-black my-2 mx-2">
-            <h3>Dish of the day</h3>
-            <div class="immagine position-absolute top-50 start-50 translate-middle">
-                <img class="w-100" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+        <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+            <h2>Dish of the day</h2>
+            <div class="w-75 position-absolute top-50 start-50 translate-middle">
+                <img class="w-100 h-100" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
 
             </div>
         </div>
