--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -9,7 +9,7 @@
         <h5 class="card-title">Product name: {{order.name}}</h5>
         <h5 class="card-title">Quantity: {{order.qty}}</h5>
         <div class="mt-auto d-flex">
-            <a class="btn btn-primary">Sign as completed</a>
+            <a class="btn btn-primary" (click)="signAsCompleted()">Sign as completed</a>
         </div>
     </div>
 </div>
