--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,41 +1,17 @@
-<!-- <nav class="navbar navbar-expand-lg bluMaggioli mb-5">
-  <div class="container-fluid d-flex align-items-center justify-content-between">
-    <a class="navbar-brand text-light">Kitchen</a>
-    <div class="text-center flex-grow-1">
-      <span class="text-light">{{dateTime | date:'HH:mm'}}</span>
-    </div>
-    <div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="d-flex collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-        </div>
-      </div>
-    </div>
-  </div>
-</nav> -->
 
-<nav class="navbar navbar-expand-lg bluMaggioli mb-5">
+
+<nav class="navbar navbar-expand-lg bluMaggioli mb-5 fixed-top">
   <div class="container-fluid position-relative">
-    <a class="navbar-brand text-light fw-bold fs-2" style="letter-spacing: 2px; font-family: 'Segoe UI', Arial, sans-serif;">
+    <a class="navbar-brand text-light fw-bold fs-2 title" >
       🍽️ Kitchen
     </a>
-    <span class="text-light fw-semibold fs-3 shadow-orologio position-absolute top-50 start-50 translate-middle-x translate-middle-y"
-          style="font-family: 'Fira Mono', 'Consolas', monospace; letter-spacing: 1px;">
+    <span class="text-light fw-semibold fs-3 clock position-absolute top-50 start-50 translate-middle-x translate-middle-y">
       {{dateTime | date:'HH:mm'}}
     </span>
     <div class="d-flex align-items-center ms-auto">
-      <button class="btn btn-outline-light fw-semibold" style="font-size: 1.1rem;" (click)="Logout()" >
+      <button class="btn btn-outline-light fw-semibold logout" (click)="Logout()" >
         <i class="bi bi-box-arrow-right me-1"></i> Logout
       </button>
-      <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="d-flex collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-        </div>
-      </div>
     </div>
   </div>
 </nav>
