--- a/src/app/components/kitchen/kitchen.component.css
+++ b/src/app/components/kitchen/kitchen.component.css
@@ -1,7 +1,3 @@
-.flex-container {
-  display: flex;
-  flex-direction: column;
-  align-items:start;
-  justify-content: center;
-  height: 100%;
+.margin{
+  margin-top: 4.5rem;
 }
