--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-end margin">
     <div class="d-flex my-3 mx-2 w-25">
         <select class="form-select" [(ngModel)]="orderTypeFilter" (change)="applyFilter()">
             <option *ngFor="let type of types" [ngValue]="type">{{type.name}}</option>
