--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -6,15 +6,16 @@
         </select> 
     </div>
 </div>
-<div class="d-flex justify-content-between">
-    <div class="d-flex justify-content-start flex-wrap w-80">
+
+<div class="d-flex justify-content-start">
+    <div class="d-flex justify-content-start flex-wrap w-75">
         @for (order of orders; track order) {
             <app-order [order]="order"></app-order>
         }
     </div>
-    <div class="d-flex justify-content-end">
-        <div class="bg-dark w-20 mx-2" style="min-width: 18em; min-height: 35em;">
-            <div class="mx-2 text-light">
+    <div class=" justify-content-start mx-2">
+        <div class="card w-25 mx-2" style="min-width: 18em; min-height: 14em;">
+            <div class="mx-2">
                 <ul>
                   <li *ngFor="let entry of getSummary() | keyvalue">
                     {{ entry.key }} x{{ entry.value }}
