--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -4,41 +4,50 @@
 <div class="d-flex">
 
     <div class="w-75 container d-flex justify-content-around flex-wrap">
-        <div class="w-50 ">
-            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+        <div class="w-50 position-relative d-flex ">
+            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Tables</div>
-                0
+                <div  style="font-size: 7rem;">0</div>
             </div>
         </div>
-        <div class="w-50 ">
-            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+        
+        <div class="w-50 position-relative d-flex ">
+            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Customers</div>
-                0
+                <div  style="font-size: 7rem;">0</div>
             </div>
         </div>
-        <div class="w-50 ">
-            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+        
+        <div class="w-50 position-relative d-flex ">
+            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Waiting Orders</div>
-                0
+                <div  style="font-size: 7rem;">0</div>
             </div>
         </div>
-        <div class="w-50 ">
-            <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+        
+        <div class="w-50 position-relative d-flex ">
+            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Prepared Orders</div>
-                0
+                <div  style="font-size: 7rem;">0</div>
             </div>
         </div>
         
     </div>
-    <div class="w-50 position-relative">
-        <div class="box border border-4 rounded-4 border-black my-2 mx-2">
+    <div class="w-50 position-relative d-flex">
+        <!-- <div class="flex-column justify-content-center text-center border border-4 rounded-4 border-black my-2 mx-2">
             <h2>Dish of the day</h2>
-            <div class="w-75 position-absolute top-50 start-50 translate-middle">
-                <img class="w-100 h-100" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+            <div class="w-75 flex-column text-center ">
+                <img class="w-100" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
 
             </div>
-        </div>
+        </div> -->
         
+        
+        <div class="w-100 d-flex justify-content-between flex-column align-items-center border border-4 rounded-4 border-black my-2 mx-2">
+            <div class="h2">Dish of the day</div>
+            <img class="w-50" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+            <h2>nome</h2>
+        </div>
     </div>
 
 </div>
@@ -49,29 +58,29 @@
 
 <div class="border border-4 rounded-4 border-black my-2 mx-2">
     
-    <h2 >Most Ordered Dishes</h2>
+    <h2 class="mx-4">Most Ordered Dishes</h2>
 
     <!-- da farlo con un ngFor e usare possibilmente le prime cinque pù ordinate-->
 
     <div class=" d-flex justify-content-around">
-        <div class="immagine">
-            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+        <div class="w-25 d-flex justify-content-center flex-column align-items-center" style="font-size: 2.5rem;">
+            <img class="w-75" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
             nome
         </div>
-        <div class="immagine">
-            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+        <div class="w-25 d-flex justify-content-center flex-column align-items-center" style="font-size: 2.5rem;">
+            <img class="w-75" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
             nome
         </div>
-        <div class="immagine">
-            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+        <div class="w-25 d-flex justify-content-center flex-column align-items-center" style="font-size: 2.5rem;">
+            <img class="w-75" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
             nome
         </div>
-        <div class="immagine">
-            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+        <div class="w-25 d-flex justify-content-center flex-column align-items-center" style="font-size: 2.5rem;">
+            <img class="w-75" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
             nome
         </div>
-        <div class="immagine">
-            <img src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
+        <div class="w-25 d-flex justify-content-center flex-column align-items-center" style="font-size: 2.5rem;">
+            <img class="w-75" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
             nome
         </div>
     </div>
