color background statistics

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -6,6 +6,6 @@
       border: none;
 }
 .fullscreen-bg {
-  background-color: #0d6efd; /* blu Bootstrap, oppure usa #007bff o quello che preferisci */
+  background-color: #0d6efd; 
   min-height: 100vh;
 }
