--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,32 +1,33 @@
-<h1 class="d-flex justify-content-around">Fusion Sushi Restaraunt</h1>
+<div class="fullscreen-bg">
+    <h1 class="textColor d-flex justify-content-around">Fusion Sushi Restaraunt</h1>
 
 
 <div class="d-flex">
 
     <div class="w-75 container d-flex justify-content-around flex-wrap">
         <div class="w-50 position-relative d-flex ">
-            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Tables</div>
                 <div  style="font-size: 7rem;">0</div>
             </div>
         </div>
         
         <div class="w-50 position-relative d-flex ">
-            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Customers</div>
                 <div  style="font-size: 7rem;">0</div>
             </div>
         </div>
         
         <div class="w-50 position-relative d-flex ">
-            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Waiting Orders</div>
                 <div  style="font-size: 7rem;">0</div>
             </div>
         </div>
         
         <div class="w-50 position-relative d-flex ">
-            <div class="w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                 <div class="h3">Prepared Orders</div>
                 <div  style="font-size: 7rem;">0</div>
             </div>
@@ -43,7 +44,7 @@
         </div> -->
         
         
-        <div class="w-100 d-flex justify-content-between flex-column align-items-center border border-4 rounded-4 border-black my-2 mx-2">
+        <div class="interBox-bg w-100 d-flex justify-content-between flex-column align-items-center border border-4 rounded-4 border-black my-2 mx-2">
             <div class="h2">Dish of the day</div>
             <img class="w-50" src="https://storage.cloud.google.com/pw2025/scallop.jpeg" alt="">
             <h2>nome</h2>
@@ -56,7 +57,7 @@
 
 
 
-<div class="border border-4 rounded-4 border-black my-2 mx-2">
+<div class="interBox-bg border border-4 rounded-4 border-black my-2 mx-2">
     
     <h2 class="mx-4">Most Ordered Dishes</h2>
 
@@ -84,4 +85,5 @@
             nome
         </div>
     </div>
+</div>
 </div>
