--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="d-flex justify-content-start">
-    <div class="d-flex justify-content-start flex-wrap w-75">
+    <div class="d-flex justify-content-start flex-wrap w-75 mx-2">
         @for (order of orders; track order) {
             <app-order [order]="order"></app-order>
         }
