Refactor order component: enhance order status display with danger and warning states, add time formatting, and clean up login component initialization

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <a class="navbar-brand text-light fw-bold fs-2 title" >
       🍽️ Kitchen
     </a>
-    <span class="text-light fw-semibold fs-3 clock position-absolute top-50 start-50 translate-middle-x translate-middle-y">
+    <span class="user-select-none text-light fw-semibold fs-3 clock position-absolute top-50 start-50 translate-middle-x translate-middle-y">
       {{dateTime | date:'HH:mm'}}
     </span>
     <div class="d-flex align-items-center ms-auto">
