--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,67 +1,71 @@
 <div class="fullscreen-bg">
-    <h1 class="textColor d-flex justify-content-around">Fusion Sushi Restaraunt</h1>
-
-
-<div class="d-flex" style="height: 60vh;">
-
-    <div class="w-75 container d-flex justify-content-around flex-wrap">
-        <div class="w-50 position-relative d-flex ">
-            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
-                <div class="h3">Tables</div>
-                <div  style="font-size: 6rem;">{{getAllOccupietedTable()}}</div>
-            </div>
-        </div>
-        
-        <div class="w-50 position-relative d-flex ">
-            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
-                <div class="h3">Customers</div>
-                <div  style="font-size: 6rem;">{{getNumberOfCustomers()}}</div>
-            </div>
-        </div>
-        
-        <div class="w-50 position-relative d-flex ">
-            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
-                <div class="h3">Waiting Orders</div>
-                <div  style="font-size: 6rem;">{{getWaitingOrders()}}</div>
-            </div>
-        </div>
-        
-        <div class="w-50 position-relative d-flex ">
-            <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
-                <div class="h3">Prepared Orders</div>
-                <div  style="font-size: 6rem;">{{getPreparedOrders()}}</div>
-            </div>
-        </div>
-        
+    <div class="d-flex align-items-center justify-content-between mb-2">
+        <span class="textColor title h1 mx-auto text-center flex-grow-1">Fusion Sushi Restaraunt</span>
+        <button class="btn btn-outline-light fw-semibold logout ms-3 buttonPosition" >
+            <i class="bi bi-box-arrow-right me-1"></i> Logout
+        </button>
     </div>
-    <div class="w-50 position-relative d-flex">
-
-        <div class="interBox-bg w-100 d-flex justify-content-between flex-column align-items-center border border-4 rounded-4 border-black my-2 mx-2">
-            <div class="h2">Dish of the day</div>
-            <img class="w-50" src="{{getMostOrderedDish()}}" alt="">
-            <h2 >{{mostOrdered}}</h2>
-        </div>
-    </div>
-
-</div>
-
-<div class="clear"></div>
-
-
-
-<div class="interBox-bg border border-4 rounded-4 border-black my-2 mx-2">
     
-    <h2 class="mx-4">Most Ordered Dishes</h2>
+    <div class="d-flex" style="height: 60vh;">
 
-    <!-- da farlo con un ngFor e usare possibilmente le prime cinque pù ordinate-->
-
-    <div class=" d-flex justify-content-around">
-        @for(dish of getFirstFiveOrderedDish(); track dish){
-            <div class="w-25 d-flex justify-content-center flex-column align-items-center" style="font-size: 1.5rem;">
-                <img class="w-75" src="{{findDish(dish)}}" alt="">
-                {{dish}}
+        <div class="w-75 container d-flex justify-content-around flex-wrap">
+            <div class="w-50 position-relative d-flex ">
+                <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+                    <div class="h3">Tables</div>
+                    <div  style="font-size: 6rem;">{{getAllOccupietedTable()}}</div>
+                </div>
             </div>
-        }
+            
+            <div class="w-50 position-relative d-flex ">
+                <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+                    <div class="h3">Customers</div>
+                    <div  style="font-size: 6rem;">{{getNumberOfCustomers()}}</div>
+                </div>
+            </div>
+            
+            <div class="w-50 position-relative d-flex ">
+                <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+                    <div class="h3">Waiting Orders</div>
+                    <div  style="font-size: 6rem;">{{getWaitingOrders()}}</div>
+                </div>
+            </div>
+            
+            <div class="w-50 position-relative d-flex ">
+                <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+                    <div class="h3">Prepared Orders</div>
+                    <div  style="font-size: 6rem;">{{getPreparedOrders()}}</div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="w-50 position-relative d-flex">
+
+            <div class="interBox-bg w-100 d-flex justify-content-between flex-column align-items-center border border-4 rounded-4 border-black my-2 mx-2">
+                <div class="h2">Dish of the day</div>
+                <img class="w-50" src="{{getMostOrderedDish()}}" alt="">
+                <h2 >{{mostOrdered}}</h2>
+            </div>
+        </div>
+
     </div>
-</div>
+
+    <div class="clear"></div>
+
+
+
+    <div class="interBox-bg border border-4 rounded-4 border-black my-2 mx-2">
+        
+        <h2 class="mx-4">Most Ordered Dishes</h2>
+
+        <!-- da farlo con un ngFor e usare possibilmente le prime cinque pù ordinate-->
+
+        <div class=" d-flex justify-content-around">
+            @for(dish of getFirstFiveOrderedDish(); track dish){
+                <div class="w-25 d-flex justify-content-center flex-column align-items-center" style="font-size: 1.5rem;">
+                    <img class="w-75" src="{{findDish(dish)}}" alt="">
+                    {{dish}}
+                </div>
+            }
+        </div>
+    </div>
 </div>
