Update background and text colors in statistics component styles

--- a/src/app/components/statistics/statistics.component.css
+++ b/src/app/components/statistics/statistics.component.css
@@ -3,10 +3,10 @@
   min-height: 100vh;
 }
 .interBox-bg{
-    background-color: beige ;
+    background-color: white ;
 }
 .textColor{
-    color: beige;
+    color: white;
 }
 
 .buttonPosition {
