--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,7 +1,7 @@
 <div class="fullscreen-bg">
     <div class="d-flex align-items-center justify-content-between mb-2">
         <span class="textColor title h1 mx-auto text-center flex-grow-1">Fusion Sushi Restaraunt</span>
-        <button class="btn btn-outline-light fw-semibold logout ms-3 buttonPosition" >
+        <button class="btn btn-outline-light fw-semibold logout ms-3 buttonPosition" (click)="Logout()"> 
             <i class="bi bi-box-arrow-right me-1"></i> Logout
         </button>
     </div>
