Refactor kitchen component styles by consolidating List class usage in HTML and CSS

--- a/src/app/components/kitchen/kitchen.component.css
+++ b/src/app/components/kitchen/kitchen.component.css
@@ -1,3 +1,11 @@
 .margin{
   margin-top: 4.5rem;
 }
+
+.List{
+  min-width: 18em;
+  min-height: 14em;
+  max-height: 36em;
+  overflow-y: auto;
+  width: 100%;
+}
