--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -8,13 +8,13 @@
 </div>
 
 <div class="d-flex justify-content-start">
-    <div class="d-flex justify-content-start flex-wrap w-75 mx-2">
+    <div class="d-flex justify-content-start flex-wrap w-75 mx-2 List">
         @for (order of orders; track order) {
             <app-order [order]="order"></app-order>
         }
     </div>
     <div class=" justify-content-start mx-2">
-        <div class="card w-25 mx-2" style="min-width: 18em; min-height: 14em;">
+        <div class="card w-25 mx-2 List">
             <div class="mx-2">
                 <ul>
                   <li *ngFor="let entry of getSummary() | keyvalue">
