sistemazione dei waiting e prepared orders

--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -9,31 +9,31 @@
     <div class="d-flex" style="height: 60vh;">
 
         <div class="w-75 container d-flex justify-content-around flex-wrap">
-            <div class="w-50 position-relative d-flex ">
-                <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
+            <div class="w-50 position-relative d-flex">
+                <div class="interBox-bg w-100 flex-column justify-content-center text-center border border-4 rounded-4 border-black my-2 mx-2">
                     <div class="h3">Tables</div>
-                    <div  style="font-size: 6rem;">{{occupiedTables}}</div>
+                    <div class="position-absolute top-50 start-50 translate-middle" style="font-size: 6rem;">{{occupiedTables}}</div>
                 </div>
             </div>
             
             <div class="w-50 position-relative d-flex ">
                 <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
                     <div class="h3">Customers</div>
-                    <div  style="font-size: 6rem;">{{nCostumers}}</div>
+                    <div class="position-absolute top-50 start-50 translate-middle" style="font-size: 6rem;">{{nCostumers}}</div>
                 </div>
             </div>
             
             <div class="w-50 position-relative d-flex ">
                 <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
-                    <div class="h3">Waiting Orders</div>
-                    <div  style="font-size: 6rem;">{{waitingOrders}}</div>
+                    <div class="h3">Waiting Dishes</div>
+                    <div class="position-absolute top-50 start-50 translate-middle" style="font-size: 6rem;">{{waitingDishes}}</div>
                 </div>
             </div>
             
             <div class="w-50 position-relative d-flex ">
                 <div class="interBox-bg w-100 flex-column text-center border border-4 rounded-4 border-black my-2 mx-2">
-                    <div class="h3">Prepared Orders</div>
-                    <div  style="font-size: 6rem;">{{preparedOrders}}</div>
+                    <div class="h3">Prepared Dishes</div>
+                    <div class="position-absolute top-50 start-50 translate-middle" style="font-size: 6rem;">{{preparedDishes}}</div>
                 </div>
             </div>
             
