Update login button text from 'accedi' to 'Sing in'

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,7 +25,7 @@
         </span>
       </div>
         <small class="text-danger d-block m-2">{{ errorstring }}</small>
-      <input type="submit" class="btn btn-primary w-100" (click)="login()" value="accedi">
+      <input type="submit" class="btn btn-primary w-100" (click)="login()" value="Sing in">
     </form>
   </div>
 </div>
