--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -4,12 +4,13 @@
         <select class="form-select" [(ngModel)]="orderTypeFilter" (change)="applyFilter()">
             <option *ngFor="let type of types" [ngValue]="type">{{type.name}}</option>
         </select> 
+        
     </div>
 </div>
 
 <div class="d-flex justify-content-start">
     <div class="d-flex justify-content-start flex-wrap w-75 mx-2">
-        @for (order of orders; track order) {
+        @for (order of orderGroups; track order) {
             <app-order [order]="order"></app-order>
         }
     </div>
